--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   flutter_signin_button: ^1.1.0
   flutter_auth_buttons: ^0.10.0
   pin_code_fields: ^6.1.0
+  firebase_auth: ^0.20.1
+  firebase_core: ^0.7.0
+  pinput: ^1.0.0
+  shared_preferences: ^0.5.12+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
