--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^0.7.0
   pinput: ^1.0.0
   shared_preferences: ^0.5.12+4
+  http: ^0.12.2
+  dio: ^3.0.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
