--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^0.5.12+4
   http: ^0.12.2
   dio: ^3.0.10
+  rflutter_alert: ^1.1.0
+  flutter_datetime_picker: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
